# pipefog

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: tests.yml
src/: classifiers.rs  main.rs  test.rs
tests/: json_stream.rs  well_known_inputs.rs
