[package]
name = "pipefog"
version = "0.1.0"
edition = "2021"

[dependencies]
sha3 = "0.10.*"
serde_json = "1.*"
regex = "*"
lazy_static = "1.*"
hex = "0.4"
chrono = "0.4"
rand = "0.8"


[[bin]]
name = "syllable_frequency"
path = "src/bin/syllable_frequency.rs"

[[bin]]
name = "humanise"
path = "src/bin/humanise.rs"
